--- a/app/src/main/res/drawable/previous_icon.xml
+++ b/app/src/main/res/drawable/previous_icon.xml
@@ -1,11 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="30dp"
-    android:height="30dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
+    android:width="24dp"
+    android:height="24dp"
     android:tint="?attr/colorControlNormal"
-    android:autoMirrored="true">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M15.41,7.41L14,6l-6,6 6,6 1.41,-1.41L10.83,12z"/>
+      android:pathData="M6,6h2v12L6,18zM9.5,12l8.5,6L18,6z" />
 </vector>
