--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,14 +105,33 @@
 <!--                    android:scrollbars="vertical" />-->
 
                 <!--Total Songs Button-->
-                <TextView
-                    android:id="@+id/totalSongs"
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
-                    android:textSize="18sp"
-                    android:text="@string/total_songs"
-                    android:textColor="@color/black" />
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/totalSongs"
+                        android:layout_width="320dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/total_songs"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/sortBtnRV"
+                        android:layout_width="50dp"
+                        android:layout_height="30dp"
+                        android:padding="5dp"
+                        android:src="@drawable/sort_icon"
+                        android:tint="@color/black" />
+
+                </LinearLayout>
+
+
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/musicRV"
