--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -10,11 +10,11 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="2dp">
+        android:layout_marginTop="0dp">
 
         <ImageButton
             android:id="@+id/backBtnPLA"
@@ -29,7 +29,9 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginTop="20dp"
             android:contentDescription="@string/playlist_btn"
             android:gravity="center|top"
             android:text="@string/playlist_btn"
@@ -47,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@id/linearLayout"
         android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
         android:scrollbars="vertical"
-        android:paddingBottom="40dp"
+        android:paddingBottom="100dp"
         android:layout_marginTop="10dp"/>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
