--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,6 +8,13 @@
     android:orientation="vertical"
     >
 
+    <ImageView
+        android:id="@+id/settingImage"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:src="@drawable/settings_icon"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,13 +23,14 @@
         android:orientation="horizontal"
         android:background="@color/white">
 
+
+
         <TextView
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_marginTop="2dp"
             android:gravity="center|start"
             android:text="@string/set_theme"
-            android:textColor="@color/black"
             android:textSize="20sp" />
 
         <com.google.android.material.imageview.ShapeableImageView
@@ -69,7 +77,7 @@
         android:orientation="horizontal"
         android:background="@color/white"
         android:paddingHorizontal="20dp"
-        android:layout_marginVertical="2dp">
+        >
 
         <TextView
             android:layout_width="0dp"
@@ -77,7 +85,6 @@
             android:layout_weight="1"
             android:gravity="center|start"
             android:text="@string/sort_by"
-            android:textColor="@color/black"
             android:textSize="20sp"
             tools:ignore="RtlSymmetry" />
 
@@ -87,7 +94,7 @@
             android:layout_height="match_parent"
             android:padding="5dp"
             android:src="@drawable/sort_icon"
-            android:tint="@color/black" />
+             />
     </LinearLayout>
 
     <TextView
@@ -96,7 +103,7 @@
         android:layout_height="match_parent"
         android:text="@string/version_name"
         android:textSize="20sp"
-        android:textColor="@color/black"
+
         android:padding="16dp"/>
 
 </LinearLayout>
