--- a/app/src/main/res/layout/playlist_view.xml
+++ b/app/src/main/res/layout/playlist_view.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="170dp"
-    android:layout_height="210dp"
+    android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     app:cardElevation="0dp"
@@ -26,7 +26,7 @@
     <TextView
         android:id="@+id/playlistName"
         android:layout_width="135dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_marginTop="170dp"
         android:contentDescription="@string/playlist_name"
         android:ellipsize="marquee"
@@ -46,7 +46,7 @@
         android:layout_marginEnd="5dp"
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/playlist_delete"
-        android:src="@drawable/ic_close"
+        android:src="@drawable/delete_icon"
         app:tint="@color/black" />
 
 
