--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -71,31 +71,31 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:background="@color/white"
-        android:paddingHorizontal="20dp"
-        >
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:background="@color/white"-->
+<!--        android:paddingHorizontal="20dp"-->
+<!--        >-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center|start"
-            android:text="@string/sort_by"
-            android:textSize="20sp"
-            tools:ignore="RtlSymmetry" />
+<!--        <TextView-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_weight="1"-->
+<!--            android:gravity="center|start"-->
+<!--            android:text="@string/sort_by"-->
+<!--            android:textSize="20sp"-->
+<!--            tools:ignore="RtlSymmetry" />-->
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/sortBtn"
-            android:layout_width="85dp"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            android:src="@drawable/sort_icon"
-             />
-    </LinearLayout>
+<!--        <com.google.android.material.imageview.ShapeableImageView-->
+<!--            android:id="@+id/sortBtn"-->
+<!--            android:layout_width="85dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:padding="5dp"-->
+<!--            android:src="@drawable/sort_icon"-->
+<!--             />-->
+<!--    </LinearLayout>-->
 
     <TextView
         android:id="@+id/versionName"
