--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,7 +14,7 @@
     //Theme for Activities pink
     <style name="coolPink" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="themeColor">@color/cool_pink</item>
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorSecondary">@color/pink_100</item>
@@ -44,15 +44,15 @@
     //new dark Theme
     <style name="coolBlack" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="themeColor">@color/black</item>
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorSecondary">@color/black_100</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-        <item name="dialogBtnBackground">@color/white</item>
-        <item name="dialogTextColor">@color/black</item>
+        <item name="dialogBtnBackground">@color/black</item>
+        <item name="dialogTextColor">@color/white</item>
     </style>
     <style name="coolBlackNav" parent="Theme.MaterialComponents.DayNight">
         <item name="themeColor">@color/black</item>
@@ -63,8 +63,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-        <item name="dialogBtnBackground">@color/white</item>
-        <item name="dialogTextColor">@color/black</item>
+        <item name="dialogBtnBackground">@color/black</item>
+        <item name="dialogTextColor">@color/white</item>
     </style>
 
 
