--- a/app/src/main/res/values/custom_styles.xml
+++ b/app/src/main/res/values/custom_styles.xml
@@ -6,4 +6,7 @@
     <style name="big_curved">
         <item name="cornerSize">9%</item>
     </style>
+    <style name="circle">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
