--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -22,16 +22,19 @@
 <!--            android:layout_height="wrap_content"-->
 <!--            android:orientation="horizontal">-->
 
-            <ImageButton
-                android:id="@+id/backBtnFA"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="5dp"
-                android:backgroundTint="@android:color/transparent"
-                android:contentDescription="@string/back_btn"
-                android:padding="5dp"
-                android:src="@drawable/back_icon"
-                app:tint="@color/black" />
+        <ImageView
+            android:id="@+id/backBtnFA"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/back_icon"
+            android:background="@drawable/custom_selectable_background"
+            android:padding="10dp"
+            android:layout_marginStart="5dp"
+            android:contentDescription="@string/back_btn"
+            app:tint="?colorOnPrimary"
+            android:clickable="true"
+            android:focusable="true" />
 
 <!--            <com.google.android.material.imageview.ShapeableImageView-->
 <!--                android:id="@+id/sortBtnFA"-->
