--- a/app/src/main/res/layout/activity_playlist_details.xml
+++ b/app/src/main/res/layout/activity_playlist_details.xml
@@ -16,28 +16,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/backBtnPD"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="5dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/back_icon"
+            android:background="@drawable/custom_selectable_background"
+            android:padding="8dp"
+            android:layout_marginStart="10dp"
             android:contentDescription="@string/back_btn"
-            android:backgroundTint="@android:color/transparent"
-            app:tint="@color/black"
-            android:padding="5dp"/>
+            app:tint="?colorOnPrimary"
+            />
 
         <TextView
             android:id="@+id/playlistNamePD"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="45dp"
             android:layout_marginEnd="55dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:contentDescription="@string/playlist_btn"
             android:gravity="center"
             android:singleLine="true"
             android:text="@string/playlist_btn"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnPrimary"
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -51,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/linearLayout"
-        android:layout_marginTop="0dp">
+        android:layout_marginTop="5dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/playlistImgPD"
@@ -68,7 +70,7 @@
             android:text="@string/playlist_name"
             android:gravity="center"
             android:layout_marginHorizontal="5dp"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnPrimary"
             android:textSize="18sp" />
 
         <TextView
@@ -78,7 +80,7 @@
             android:text="@string/playlist_name"
             android:gravity="center"
             android:layout_marginHorizontal="5dp"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorOnPrimary"
             android:textSize="16sp" />
     </LinearLayout>
 
