--- a/app/src/main/res/layout/activity_select_playlist.xml
+++ b/app/src/main/res/layout/activity_select_playlist.xml
@@ -17,15 +17,18 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="2dp">
 
-        <ImageButton
+        <ImageView
             android:id="@+id/backBtnPS"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/back_icon"
+            android:background="@drawable/custom_selectable_background"
+            android:padding="8dp"
+            android:layout_marginStart="10dp"
             android:contentDescription="@string/back_btn"
-            android:backgroundTint="?colorOnPrimary"
-            app:tint="@color/black"
-            android:layout_margin="5dp"/>
+            app:tint="?colorOnPrimary"
+            />
 
 <!--        <androidx.appcompat.widget.SearchView-->
 <!--            android:id="@+id/searchViewPS"-->
