--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +30,7 @@
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchViewSA"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             app:queryHint="@string/search_song"
             app:searchIcon="@drawable/search_icon"
             android:focusable="false"
