--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,33 +44,33 @@
     //new dark Theme
     <style name="coolBlack" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="themeColor">@color/black</item>
-        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/black_100</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-        <item name="dialogBtnBackground">@color/black</item>
-        <item name="dialogTextColor">@color/white</item>
+        <item name="dialogBtnBackground">@color/white</item>
+        <item name="dialogTextColor">@color/black</item>
     </style>
     <style name="coolBlackNav" parent="Theme.MaterialComponents.DayNight">
         <item name="themeColor">@color/black</item>
-        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/black_100</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/themeColor</item>
-        <item name="dialogBtnBackground">@color/black</item>
-        <item name="dialogTextColor">@color/white</item>
+        <item name="dialogBtnBackground">@color/white</item>
+        <item name="dialogTextColor">@color/black</item>
     </style>
 
 
     <style name="coolBlue" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="themeColor">@color/cool_blue</item>
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorSecondary">@color/teal_200</item>
@@ -83,7 +83,7 @@
     </style>
     <style name="coolPurple" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="themeColor">@color/purple_500</item>
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorSecondary">@color/teal_200</item>
@@ -96,7 +96,7 @@
     </style>
     <style name="coolGreen" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="themeColor">@color/cool_green</item>
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/black</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorSecondary">@color/teal_200</item>
