--- a/app/src/main/res/layout/activity_select_playlist.xml
+++ b/app/src/main/res/layout/activity_select_playlist.xml
@@ -17,19 +17,15 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="2dp">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/backBtnPS"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
             android:src="@drawable/back_icon"
-            android:background="@drawable/custom_selectable_background"
-            android:padding="8dp"
-            android:layout_marginStart="10dp"
             android:contentDescription="@string/back_btn"
-            app:tint="?colorOnPrimary"
-            />
-
+            android:backgroundTint="?colorOnPrimary"
+            app:tint="@color/black"
+            android:layout_margin="5dp"/>
 <!--        <androidx.appcompat.widget.SearchView-->
 <!--            android:id="@+id/searchViewPS"-->
 <!--            android:layout_width="match_parent"-->
